# Bestiario_dEd_python

./: .gitignore  CLAUDE.md  README.md  analise_bestiario.py  banco_de_dados.py  bestiario.py  main.py  pyproject.toml
.claude/specs/: 1_fundacao.md  2_cliente_api_v2.md  3_schema_e_ingestao_monstro.md  4_extracao_acoes_ataques.md  5_extracao_efeitos.md  6_relatorios_e_consulta_local.md  cliente_api_v2.md  extracao_acoes_ataques.md  extracao_efeitos.md  fundacao.md  relatorios_e_consulta_local.md  schema_e_ingestao_monstro.md
bestiario/: __init__.py  banco.py  cliente_api.py  extracao.py  modelos.py  relatorios.py
tests/: test_banco.py  test_cliente_api.py  test_extracao.py  test_main.py  test_relatorios.py
