[project]
name = "bestiario-ded-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2,<3.0",
    "requests>=2.32,<3.0",
    "tabulate>=0.9,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.15.22,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I ordenação de imports (stdlib → terceiros → local)
select = ["E", "W", "F", "I"]
